fix: popup wrap

--- a/src/templates/blocks/popup/popup.scss
+++ b/src/templates/blocks/popup/popup.scss
@@ -18,7 +18,6 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 423px;
-    height: 385px;
     background-color: #fff;
     opacity: 1;
     color: #000000;
